// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopOver should match snapshot 1`] = `
<div
  className="fSRmwf"
/>
`;

exports[`PopOver should match snapshot 2`] = `
<div
  className="hokLBr"
/>
`;
